# feedbackd

./: .dir-locals.el  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  NEWS  README.md  meson.build  meson_options.txt
.gitlab-ci/: check-meson  check-style.py  uncrustify.cfg
cli/: fbcli.c  meson.build
data/: 90-feedbackd.rules  default.json  fbd-alert-slider.service.in  meson.build  org.sigxcpu.Feedback.Haptic.xml  org.sigxcpu.Feedback.xml  org.sigxcpu.feedbackd.gschema.xml
debian/: changelog  control  copyright  feedbackd.install  feedbackd.lintian-overrides  feedbackd.manpages  feedbackd.postinst  feedbackd.udev  gbp.conf  libfeedback-0.0-0.symbols  libfeedback-dev.doc-base  libfeedback-dev.docs  libfeedback-dev.install  libfeedback-dev.lintian-overrides  not-installed  rules
debian/tests/: control
doc/: Event-naming-spec-0.0.0.md  Feedback-theme-spec-0.0.0.md  build-howto.md  fbcli.rst  fbd-theme-validate.rst  feedback-themes.rst  feedbackd.rst  initialization.md  libfeedback.toml.in  meson.build
examples/: 90-framework-laptop-feedbackd.rules
libfeedback/: lfb-event.c  lfb-event.h  lfb-main.c  lfb-main.h  libfeedback.c  libfeedback.h  meson.build
src/: fbd-alert-slider.c  fbd-dev-led-flash.c  fbd-dev-led-flash.h  fbd-dev-led-multicolor.c  fbd-dev-led-multicolor.h  fbd-dev-led-priv.h  fbd-dev-led-qcom-multicolor.c  fbd-dev-led-qcom-multicolor.h  fbd-dev-led-qcom-priv.h  fbd-dev-led-qcom.c  fbd-dev-led-qcom.h  fbd-dev-led.c  fbd-dev-led.h  fbd-dev-leds.c  fbd-dev-leds.h  fbd-dev-sound.c  fbd-dev-vibra.c  fbd-dev-vibra.h  fbd-event.c  fbd-event.h  fbd-feedback-led.c  fbd-feedback-led.h  fbd-feedback-manager.c  fbd-feedback-manager.h  fbd-feedback-profile.c  fbd-feedback-sound.c  fbd-feedback-sound.h  fbd-feedback-theme.c  fbd-feedback-theme.h  fbd-feedback-vibra-pattern.c  fbd-feedback-vibra-pattern.h  fbd-feedback-vibra-periodic.c  fbd-feedback-vibra-priv.h  fbd-feedback-vibra-rumble.c  fbd-feedback-vibra.c  fbd-haptic-manager.c  fbd-haptic-manager.h  fbd-ledctrl.c  fbd-theme-validate.c  fbd.c  (+2 more)
subprojects/: gmobile.wrap
tests/: meson.build  test-fbd-dev-led.c  test-fbd-event.c  test-fbd-feedback-led.c  test-fbd-feedback-sound.c  test-fbd-feedback-vibra.c  test-lfb-event.c  test-lfb-integration.c  test-lfb-main.c  testlib.c  testlib.h
tests/data/parent/: base.json  test.json
tests/data/umockdev/: led-flash.umockdev  led-legacy.umockdev  led-multicolor.umockdev  led-qcom-multicolor.umockdev  led-qcom-simple.umockdev  led-simple.umockdev
tests/data/user-config/feedbackd/themes/: custom.json
tests/data/xdg-data/feedbackd/themes/: replace.json
tests/services/: meson.build
